[fix]: late content fetching causes layout shifts (#42)
* chore: establishing PR

* fix: font path url matches the actual url where the font is served from

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,22 +5,22 @@
 @layer base {
   @font-face {
     font-family: "PicNic";
-    src: url("../../public/fonts/PicNic-Regular.otf");
+    src: url("../../fonts/PicNic-Regular.otf");
   }
 
   @font-face {
     font-family: "Helvetica";
-    src: url("../../public/fonts/Helvetica.ttf");
+    src: url("../../fonts/Helvetica.ttf");
   }
 
   @font-face {
     font-family: "NaN Holo Mono Blonde";
-    src: url("../../public/fonts/NaN-Holo-Mono-Blonde.ttf");
+    src: url("../../fonts/NaN-Holo-Mono-Blonde.ttf");
   }
 
   @font-face {
     font-family: "Suisse Intl Mono";
-    src: url("../../public/fonts/Suisse-Intl-Mono.ttf");
+    src: url("../../fonts/Suisse-Intl-Mono.ttf");
   }
 
   h1 {
